--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "deploy:move": "node move-contracts/scripts/deploy.js --network=testnet",
     "deploy:plinko": "node move-contracts/scripts/deploy.js --network=testnet --dir=move-contracts/plinko-only",
     "setup:vrf-subscription": "npx hardhat run scripts/setup-vrf-subscription.js --network arbitrum-sepolia",
-    "deploy:vrf": "npx hardhat run scripts/deploy-vrf-consumer.js --network arbitrum-sepolia",
+    "deploy:yellow-casino": "npx hardhat run scripts/deploy-yellow-casino.js --network arbitrum-sepolia",
     "test:vrf": "npx hardhat run scripts/test-vrf.js --network arbitrum-sepolia",
     "vrf:create": "cross-env VRF_ACTION=create npx hardhat run scripts/setup-vrf-subscription.js --network arbitrum-sepolia",
     "vrf:info": "cross-env VRF_ACTION=info npx hardhat run scripts/setup-vrf-subscription.js --network arbitrum-sepolia",
@@ -29,9 +29,11 @@
     "@emotion/is-prop-valid": "^1.3.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@erc7824/nitrolite": "^0.3.0",
     "@mui/icons-material": "^5.15.18",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
+    "@openzeppelin/contracts": "^5.4.0",
     "@rainbow-me/rainbowkit": "^2.2.8",
     "@react-three/drei": "^9.88.0",
     "@react-three/fiber": "^8.14.5",
